<resources>
    <string name="app_name">Test</string>
    <string name="app_leaving_notice">Press again to leave the application.</string>
    <string name="app_date">1.1.2018</string>

    <string name="app_owner_name">Owner name</string>
    <string name="app_user_image_description">User image</string>

    <!-- Bottom menu -->
    <string name="app_menu_questions">Questions</string>
    <string name="app_menu_settings">Settings</string>

    <!-- Activity questions -->
    <string name="iq_error_message">Failed to download new questions!</string>
    <string name="iq_error_button_retry">Retry</string>

    <!-- Item Question -->
    <string name="iq_title">Title</string>
    <string name="iq_dummy_date">Unknown date</string>
    <string name="iq_downloading_questions">This is not the end!\nDownloading next questions.</string>

    <!-- Fragment Questions List -->
    <string name="fql_search">Search</string>
    <string name="fql_empty">No questions found.</string>

    <!-- Fragment Question Detail -->
    <string name="fqd_question_title">Question title</string>
    <string name="fqd_question_body">Question text</string>
    <string name="fqd_table_is_answered">Is answered?</string>
    <string name="fqd_table_is_answered_true">Answered</string>
    <string name="fqd_table_is_answered_false">Open</string>
    <string name="fqd_table_answer_count">Answer count</string>
    <string name="fqd_table_view_count">View count</string>
    <string name="fqd_table_score">Score</string>
    <string name="fqd_table_dummy">0</string>
    <string name="fqd_user_reputation">Score: %1$d</string>

    <!-- Activity settings -->
    <string name="as_additional_information_title">Additional information</string>
    <string name="as_quota_title">Quota for API calls</string>
    <string name="as_quota_description">Download of questions is limited and this view shows how many of them can still be downloaded. This limit resets every day.</string>
    <string name="as_quota_value_dummy">0 of 0</string>
    <string name="as_quota_value">%1$d of %2$d</string>
    <string name="as_api_settings_title">API settings</string>
    <string name="as_api_page_size_title">Page size</string>
    <string name="as_api_page_size_description">Sets how many documents is downloaded per API run.</string>
    <string name="as_api_page_size_dummy">0</string>
    <string name="as_api_page_title">Current page</string>
    <string name="as_api_page_description">Sets how many documents is downloaded per API run. Note that this changes paging and you may receive duplicate data.</string>
    <string name="as_api_page_dummy">1</string>
</resources>
