<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fqdConstQuestion"
        android:background="@drawable/item_question_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fqdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/fqd_question_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fqdOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:maxLines="1"
            android:text="@string/app_owner_name"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toStartOf="@+id/fqdCreatedDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fqdTitle" />

        <TextView
            android:id="@+id/fqdCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_date"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fqdTitle" />

        <TextView
            android:id="@+id/fqdBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/fqd_question_body"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fqdOwnerName" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fqdBody">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/fqd_table_is_answered"
                    style="@style/DetailTableCell" />

                <TextView
                    android:text="@string/fqd_table_answer_count"
                    style="@style/DetailTableCell" />

                <TextView
                    android:text="@string/fqd_table_view_count"
                    style="@style/DetailTableCell" />

                <TextView
                    android:text="@string/fqd_table_score"
                    style="@style/DetailTableCell" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fqdIsAnswered"
                    android:text="@string/fqd_table_is_answered_false"
                    style="@style/DetailTableCell" />

                <TextView
                    android:id="@+id/fqdAnswerCount"
                    android:text="@string/fqd_table_dummy"
                    style="@style/DetailTableCell" />

                <TextView
                    android:id="@+id/fqdViewCount"
                    android:text="@string/fqd_table_dummy"
                    style="@style/DetailTableCell" />

                <TextView
                    android:id="@+id/fqdScore"
                    android:text="@string/fqd_table_dummy"
                    style="@style/DetailTableCell" />

            </TableRow>

        </TableLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>